Moved to version 1.10.1, dependencies upgraded, compiler option '-proc:full' related to annotation processing added.