@@ -4,7 +4,7 @@
 
     <groupId>de.christofreichardt</groupId>
     <artifactId>tracelogger</artifactId>
-    <version>1.10.0</version>
+    <version>1.10.1</version>
     <packaging>jar</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -48,7 +48,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.2</version>
+                <version>3.5.2</version>
                 <configuration>
                     <includes>
                         <include>**/TracerFactoryUnit5.java</include>
@@ -69,18 +69,28 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>3.13.0</version>
                 <configuration>
                     <release>11</release>
-                    <compilerArgument>-Xlint:all,-serial</compilerArgument>
-                    <useIncrementalCompilation>false</useIncrementalCompilation>
-                    <forceJavacCompilerUse>false</forceJavacCompilerUse>
+                    <compilerArgs>
+                        <arg>-Xlint:all,-serial,-classfile,-processing</arg>
+                        <arg>-J-Duser.language=en_EN</arg>
+                        <arg>-proc:full</arg> <!-- needed for Log4js XmlConfigurationFactory -->
+                </compilerArgs>
+
+                <!--
+                needed for passing through the -J options
+                <fork>
+                    true
+                </fork>
+                -->
+
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.6.1</version>
+                <version>3.8.1</version>
             </plugin>
         </plugins>
     </build>
@@ -93,7 +103,7 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>build-helper-maven-plugin</artifactId>
-                        <version>3.5.0</version>
+                        <version>3.6.0</version>
                         <executions>
                             <execution>
                                 <id>timestamp-property</id>
@@ -113,7 +123,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>3.6.3</version>
+                        <version>3.11.1</version>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
@@ -125,8 +135,9 @@
                         <configuration>
                             <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
                             <header>tracelogger ${project.version} API</header>
+                            <!--suppress UnresolvedMavenProperty -->
                             <bottom>
-                                Copyright &#x00A9; 2014, 2023, Christof Reichardt - Paul-Ehrlich-Weg 1 - D-63110 Rodgau - Build ${build.time}
+                                Copyright &#x00A9; 2014, 2024, Christof Reichardt - Paul-Ehrlich-Weg 1 - D-63110 Rodgau - Build ${build.time}
                             </bottom>
                             <additionalJOptions>
                                 <additionalJOption>-J-Duser.language=en</additionalJOption>
@@ -136,7 +147,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-source-plugin</artifactId>
-                        <version>3.3.0</version>
+                        <version>3.3.1</version>
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
@@ -149,7 +160,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>3.1.0</version>
+                        <version>3.2.7</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
@@ -180,19 +191,19 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.10.0</version>
+            <version>5.11.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
-            <version>5.10.0</version>
+            <version>5.11.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.24.2</version>
+            <version>3.26.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -210,19 +221,19 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.4.14</version>
+            <version>1.5.12</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>2.21.1</version>
+            <version>2.24.1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.21.1</version>
+            <version>2.24.1</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
